--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-validation": "^3.0.7"
+    "validator": "^10.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
