--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "date-fns": "^1.29.0",
     "firebase": "^5.4.0",
     "history": "^4.7.2",
     "lodash": "^4.17.10",
