--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "history": "^4.7.2",
     "lodash": "^4.17.10",
     "react": "^16.4.2",
+    "react-bootstrap": "^0.32.3",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-simple-popover": "^0.2.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "validator": "^10.6.0"
